# simple-ping

./: .gitignore  LICENSE  Makefile  README.md  cabal.nix  default.nix  docker.nix  release.nix  shell.nix  simple-ping.cabal
app/: Main.hs
k8s/: deployment.yaml  service.yaml
nix/: sources.json
