cabal-version: 2.4
name:          simple-ping
version:       0.1.0.0
synopsis:      A simple ping that returns 200
category:      web, kubernetes
homepage:      https://github.com/sagittaros/simple-ping
bug-reports:   https://github.com/sagittaros/simple-ping/issues
license-file:  LICENSE
license:       MIT
author:        Felix
maintainer:    zen9.felix@gmail.com

common common-options
  build-depends:
    , base    >=4.11.1.0 && <4.15
    , relude

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude)

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wnoncanonical-monad-instances

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options: -Wmissing-deriving-strategies -fwrite-ide-info -hiedir=.hie

  if impl(ghc >=8.10)
    ghc-options: -Wunused-packages

  default-language:   Haskell2010
  default-extensions:
    DeriveGeneric
    TypeApplications

executable simple-ping
  import:         common-options
  main-is:        Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base        ^>=4.14.1.0
    , http-types
    , wai
    , warp

  hs-source-dirs: app
